src/test/deca/context/invalid/ContextAvecObjet/DeclClass/superclassNotClass.deca
// Description:
//    Superclass de type non classe
//
// Resultats:
//    Erreur contextuelle ligne 8
//    Le champs superclass doit être une classe

class A extends int {}